force-app/main/default/objects/Lab__c/fields/Discarded__c.field-meta.xml
<CustomField>
    <fullName>Discarded__c</fullName>
    <inlineHelpText>Used to indicate when the Lab discards a specimen.</inlineHelpText>
    <label>Discarded</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Twins - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Twins - Cord TIssue</fullName>
            </value>
            <value>
                <fullName>Twins - Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord TIssue</fullName>
            </value>
            <value>
                <fullName>Triplets - Placenta Tissue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>