force-app/main/default/objects/Lab__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>Cord_Blood_Order__r.fw1__Total_Lines_Discount_Amount__c</formula>
    <inlineHelpText>LU from the Cord Blood Order object</inlineHelpText>
    <label>Discount LU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>