force-app/main/default/objects/Lab__c/fields/DocuSign_Comments__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Comments__c</fullName>
    <label>Welcome Packet Comments</label>
    <length>20</length>
    <type>Text</type>
</CustomField>