force-app/main/default/objects/Lab__c/fields/Docusign_Completed__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Completed__c</fullName>
    <description>Not used, can be deleted.</description>
    <label>Docusign Completed</label>
    <type>DateTime</type>
</CustomField>