force-app/main/default/objects/Lab__c/fields/Docusign_Create_Date_for_Mother__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Create_Date_for_Mother__c</fullName>
    <inlineHelpText>Used to trigger Reminder emails</inlineHelpText>
    <label>Docusign Create Date for Mother</label>
    <type>Date</type>
</CustomField>