force-app/main/default/objects/Lab__c/fields/Docusign_Create_Date_for_Surrogate__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Create_Date_for_Surrogate__c</fullName>
    <inlineHelpText>Used to trigger Reminder emails</inlineHelpText>
    <label>Docusign Create Date for Surrogate</label>
    <type>Date</type>
</CustomField>