force-app/main/default/objects/Lab__c/fields/Docusign_Create_Date_Time_for_Surrogat__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Create_Date_Time_for_Surrogat__c</fullName>
    <description>Used to trigger reminder emails.</description>
    <label>Docusign Create Date &amp; Time for Surrogat</label>
    <type>DateTime</type>
</CustomField>