force-app/main/default/objects/Lab__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <description>Uses SF Process Builder to update Docusign envelope status per Docusign Status object. Once the status is Completed, updates stop, hence post-completed voided Docusigns do not overwrite Completed status. Also used for new Welcome Packet.</description>
    <label>Welcome Packet Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>