force-app/main/default/objects/Lab__c/fields/Docusign_Status_for_Surrogate__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Status_for_Surrogate__c</fullName>
    <description>Uses SF Process Builder to update Docusign envelope status per Docusign Status object. Once the status is Completed, updates stop, hence post-completed voided Docusigns do not overwrite Completed status.</description>
    <label>Docusign Status for Surrogate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>