force-app/main/default/objects/Lab__c/fields/Donated_or_Cancelled_but_not_discarded__c.field-meta.xml
<CustomField>
    <fullName>Donated_or_Cancelled_but_not_discarded__c</fullName>
    <inlineHelpText>Used to document collections that were donated or cancelled but not discarded by the lab.</inlineHelpText>
    <label>Donated or Cancelled but not discarded</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Twins - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Twins - Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Twins - Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Triplets - Placenta Tissue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>