force-app/main/default/objects/Lab__c/fields/Donor_Eligibility_Documents_Received__c.field-meta.xml
<CustomField>
    <fullName>Donor_Eligibility_Documents_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor Eligibility Documents Received</label>
    <type>Checkbox</type>
</CustomField>