force-app/main/default/objects/Lab__c/fields/Dr_provided_info_about_Americord__c.field-meta.xml
<CustomField>
    <fullName>Dr_provided_info_about_Americord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dr. provided info about Americord</label>
    <type>Checkbox</type>
</CustomField>