force-app/main/default/objects/Lab__c/fields/DRAI_Received__c.field-meta.xml
<CustomField>
    <fullName>DRAI_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator if the Donor Risk Assessment Interview has been received.</description>
    <inlineHelpText>Indicator if the Donor Risk Assessment Interview has been received.</inlineHelpText>
    <label>DRAI Received</label>
    <type>Checkbox</type>
</CustomField>