force-app/main/default/objects/Lab__c/fields/DS_Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Todays_Date__c</fullName>
    <description>Today&apos;s Date Formatted MM/DD/YYYY for docusign.</description>
    <formula>TEXT(Month(Today()))+&apos;/&apos;+TEXT(Day(Today()))+&apos;/&apos;+TEXT(Year(Today()))</formula>
    <label>DS Todays Date</label>
    <type>Text</type>
</CustomField>