force-app/main/default/objects/Lab__c/fields/Egg_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Egg_Donor_Status__c</fullName>
    <label>Egg Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Known_to_family</fullName>
                <label>Known to family</label>
            </value>
            <value>
                <fullName>Unknown_to_family</fullName>
                <label>Unknown to family</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>