force-app/main/default/objects/Lab__c/fields/Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Date__c</fullName>
    <formula>Cord_Blood_Order__r.Enroll_Date__c</formula>
    <label>Enroll Date</label>
    <type>Date</type>
</CustomField>