force-app/main/default/objects/Lab__c/fields/Exosomes_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Exosomes_Ordered__c</fullName>
    <formula>Cord_Blood_Order__r.Exosomes_Ordered__c</formula>
    <label>ZDeprecate Exosomes Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>