force-app/main/default/objects/Lab__c/fields/Exosomes_Stored__c.field-meta.xml
<CustomField>
    <fullName>Exosomes_Stored__c</fullName>
    <description>Total of Exomes Stored</description>
    <label>Exosomes Stored</label>
    <summaryFilterItems>
        <field>Baby__c.Exosomes_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Baby__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>