force-app/main/default/objects/Lab__c/fields/Expected_Shipping_Date_MBD__c.field-meta.xml
<CustomField>
    <fullName>Expected_Shipping_Date_MBD__c</fullName>
    <formula>IF ( WEEKDAY(DATEVALUE( MBD_Required_Date_Time__c ))= 1, DATEVALUE( MBD_Required_Date_Time__c )+1,
IF ( WEEKDAY(DATEVALUE( MBD_Required_Date_Time__c ))= 7, DATEVALUE( MBD_Required_Date_Time__c )+2,
IF ( AND(
WEEKDAY(DATEVALUE( MBD_Required_Date_Time__c ))= 6,
OR( HOUR(TIMEVALUE( MBD_Required_Date_Time__c )) &lt; 4,
HOUR(TIMEVALUE( MBD_Required_Date_Time__c )) &gt; 17)), DATEVALUE( MBD_Required_Date_Time__c )+3,
IF (
OR( HOUR(TIMEVALUE( MBD_Required_Date_Time__c )) &lt; 4,
HOUR(TIMEVALUE( MBD_Required_Date_Time__c )) &gt; 17), DATEVALUE( MBD_Required_Date_Time__c )+1, DATEVALUE( MBD_Required_Date_Time__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Shipping Date MBD</label>
    <type>Date</type>
</CustomField>