force-app/main/default/objects/Lab__c/fields/Father_s_Education__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Education__c</fullName>
    <label>Contact 2 Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High school graduate or equivalent</fullName>
            </value>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>