force-app/main/default/objects/Lab__c/fields/Father_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Email__c</fullName>
    <inlineHelpText>Syncs with Contact info using a Flow</inlineHelpText>
    <label>Contact 2 Email</label>
    <type>Email</type>
</CustomField>