force-app/main/default/objects/Lab__c/fields/Father_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_First_Name__c</fullName>
    <inlineHelpText>Syncs with Contact info using a trigger</inlineHelpText>
    <label>Contact 2 First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>