force-app/main/default/objects/Lab__c/fields/Father_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Phone__c</fullName>
    <inlineHelpText>Syncs with Contact info using a trigger</inlineHelpText>
    <label>Contact 2 Phone</label>
    <type>Phone</type>
</CustomField>