force-app/main/default/objects/Lab__c/fields/Father_s_Profession__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Profession__c</fullName>
    <label>Contact 2 Profession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>