force-app/main/default/objects/Lab__c/fields/Fathers_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Fathers_Date_of_Birth__c</fullName>
    <label>Contact 2 Date of Birth</label>
    <type>Date</type>
</CustomField>