force-app/main/default/objects/Lab__c/fields/Faxed_Consent__c.field-meta.xml
<CustomField>
    <fullName>Faxed_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faxed Consent</label>
    <type>Checkbox</type>
</CustomField>