force-app/main/default/objects/Lab__c/fields/FedEx_Shipmate_Preferences__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Shipmate_Preferences__c</fullName>
    <description>Used for Zenkraft Shipmate, based on &quot;Sender Name&quot; populates the corresponding Shipping Preferences.</description>
    <formula>IF(ISPICKVAL(Sender_Name__c, &quot;Fulfillment Dept (Andwin)&quot;), &quot;ShipmatePreference-0001&quot;,
IF(ISPICKVAL(Sender_Name__c, &quot;Client Service Dept (NYC)&quot;), &quot;ShipmatePreference-0002&quot;, 
IF(ISPICKVAL(Sender_Name__c, &quot;Client Service Dept (CA)&quot;), &quot;ShipmatePreference-0003&quot;,
&quot;&quot;)))</formula>
    <label>FedEx Shipmate Preferences</label>
    <type>Text</type>
</CustomField>