force-app/main/default/objects/Lab__c/fields/FedEx_Signature_Option__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Signature_Option__c</fullName>
    <label>FedEx Signature Option PL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Signature Required</fullName>
                <default>true</default>
                <label>No Signature Required</label>
            </value>
            <value>
                <fullName>Indirect Signature Required</fullName>
            </value>
            <value>
                <fullName>Direct Signature Required</fullName>
            </value>
            <value>
                <fullName>Adult Signature Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>