force-app/main/default/objects/Lab__c/fields/FedEx_Signature_Option_text__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Signature_Option_text__c</fullName>
    <formula>TEXT( FedEx_Signature_Option__c )</formula>
    <label>FedEx Signature Option (text)</label>
    <type>Text</type>
</CustomField>