force-app/main/default/objects/Lab__c/fields/Field_Rep_Special_Commission__c.field-meta.xml
<CustomField>
    <fullName>Field_Rep_Special_Commission__c</fullName>
    <description>Used by Jean to manage special commission for ex Field Reps.</description>
    <formula>HCP_Practice__r.Field_Rep_Special_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Rep Special Commission</label>
    <type>Checkbox</type>
</CustomField>