force-app/main/default/objects/Lab__c/fields/Form_Review_Notes_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Form_Review_Notes_Sent_to_Client__c</fullName>
    <inlineHelpText>Questions from the lab that are sent to the client. These comments must be client ready.</inlineHelpText>
    <label>Form Review Notes Sent to Client</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>