force-app/main/default/objects/Lab__c/fields/Forms__c.field-meta.xml
<CustomField>
    <fullName>Forms__c</fullName>
    <inlineHelpText>Is the Maternal Health Questionnaire completed?</inlineHelpText>
    <label>MHQ Forms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>