force-app/main/default/objects/Lab__c/fields/GBT_Certificate_of_Storage__c.field-meta.xml
<CustomField>
    <fullName>GBT_Certificate_of_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obtained and checked GBT storage certificate.</description>
    <label>GBT Cert</label>
    <type>Checkbox</type>
</CustomField>