force-app/main/default/objects/Lab__c/fields/Genome_Order_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Genome_Order_Complete_Date__c</fullName>
    <description>This is the aggregate rollup of the baby records max order completion date.</description>
    <label>Genome Order Complete Date</label>
    <summarizedField>Baby__c.Genome_Order_Complete_Date__c</summarizedField>
    <summaryForeignKey>Baby__c.Lab__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>