force-app/main/default/objects/Lab__c/fields/HCP_Active_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>HCP_Active_Status_Date__c</fullName>
    <description>Not used can be deleted</description>
    <formula>HCP_Practice__r.Active_Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Active Status Date old</label>
    <type>Date</type>
</CustomField>