force-app/main/default/objects/Lab__c/fields/HCP_Agreement__c.field-meta.xml
<CustomField>
    <fullName>HCP_Agreement__c</fullName>
    <formula>text(Medical_Professional__r.Agreement_Status_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP - Agreement</label>
    <type>Text</type>
</CustomField>