force-app/main/default/objects/Lab__c/fields/HCP_Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HCP_Agreement_Start_Date__c</fullName>
    <formula>Medical_Professional__r.Agreement_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP - Agreement Start Date</label>
    <type>Date</type>
</CustomField>