force-app/main/default/objects/Lab__c/fields/HCP_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>HCP_Full_Name__c</fullName>
    <formula>TEXT(Medical_Professional__r.Salutation)&amp;&quot; &quot;&amp; Medical_Professional__r.FirstName &amp;&quot; &quot;&amp; Medical_Professional__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Full Name</label>
    <type>Text</type>
</CustomField>