force-app/main/default/objects/Lab__c/fields/HCP_Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>HCP_Number_of_Orders__c</fullName>
    <description>Used to display the number of orders completed by the obgyn.</description>
    <formula>Medical_Professional__r.Number_of_Orders_for_Dr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>