force-app/main/default/objects/Lab__c/fields/HCP_Passive_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>HCP_Passive_Status_Date__c</fullName>
    <description>Old, not used can be deleted.</description>
    <formula>HCP_Practice__r.Passive_Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Passive Status Date old</label>
    <type>Date</type>
</CustomField>