force-app/main/default/objects/Lab__c/fields/HCP_Practice__c.field-meta.xml
<CustomField>
    <fullName>HCP_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by LSR</description>
    <label>HCP Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collections by Practice</relationshipLabel>
    <relationshipName>Labs_HCP_Practice</relationshipName>
    <type>Lookup</type>
</CustomField>