force-app/main/default/objects/Lab__c/fields/HCP_Practice_Acct__c.field-meta.xml
<CustomField>
    <fullName>HCP_Practice_Acct__c</fullName>
    <description>Used to import Medical Professional Contact ID onto Lap, temp field, can be deleted.</description>
    <formula>HCP_Practice__r.Account_Number__c</formula>
    <label>HCP Practice Acct # old</label>
    <type>Text</type>
</CustomField>