force-app/main/default/objects/Lab__c/fields/HCP_Status__c.field-meta.xml
<CustomField>
    <fullName>HCP_Status__c</fullName>
    <description>Old, not used can be deleted</description>
    <formula>Medical_Professional__r.HCP_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP - Status old</label>
    <type>Text</type>
</CustomField>