force-app/main/default/objects/Lab__c/fields/HCP_Territory__c.field-meta.xml
<CustomField>
    <fullName>HCP_Territory__c</fullName>
    <description>Used for workflow for Outside Sales Commission</description>
    <formula>HCP_Practice__r.Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP - Territory</label>
    <type>Text</type>
</CustomField>