force-app/main/default/objects/Lab__c/fields/Hold_Shipment_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_Shipment_Until__c</fullName>
    <description>Used to specify a shipment date. Populated on Opportunity by Sales Rep. Mapped to Lab upon enrollment.</description>
    <label>Hold Shipment Until</label>
    <type>Date</type>
</CustomField>