force-app/main/default/objects/Lab__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (for Hospital)</relationshipLabel>
    <relationshipName>Mothers</relationshipName>
    <type>Lookup</type>
</CustomField>