force-app/main/default/objects/Lab__c/fields/Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address__c</fullName>
    <label>Hospital Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>