force-app/main/default/objects/Lab__c/fields/Hospital_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City__c</fullName>
    <label>Hospital City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>