force-app/main/default/objects/Lab__c/fields/Hospital_Country__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Country__c</fullName>
    <label>Hospital Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>