force-app/main/default/objects/Lab__c/fields/Hospital_Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Not_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Not Listed</label>
    <type>Checkbox</type>
</CustomField>