force-app/main/default/objects/Lab__c/fields/Hospital_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Phone__c</fullName>
    <label>Hospital Phone</label>
    <type>Phone</type>
</CustomField>