force-app/main/default/objects/Lab__c/fields/Hospital_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Room_Number__c</fullName>
    <inlineHelpText>Provided by client via Digital Courier Pick-Up.</inlineHelpText>
    <label>Hospital Room Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>