force-app/main/default/objects/Lab__c/fields/Hospital_Zip__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Zip__c</fullName>
    <label>Hospital Zip/Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>