force-app/main/default/objects/Lab__c/fields/How_did_you_find_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_us__c</fullName>
    <label>How did you hear about Americord?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BabyCenter</fullName>
            </value>
            <value>
                <fullName>buybuyBaby</fullName>
                <label>BuyBuyBaby</label>
            </value>
            <value>
                <fullName>Consumer Affairs</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>WhatToExpect</fullName>
            </value>
            <value>
                <fullName>Your Baby Club</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Returning Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>