force-app/main/default/objects/Lab__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <formula>if ( Enroll_Date__c &gt;  Brochure_Sent_Date__c, &quot;IMPACT&quot;, 
if (Dr_provided_info_about_Americord__c = TRUE, &quot;IMPACT&quot;, &quot;&quot;))</formula>
    <label>Impact</label>
    <type>Text</type>
</CustomField>