force-app/main/default/objects/Lab__c/fields/Informed_Consent_Genome_Sent__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Genome_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator that the Informed Consent document has been sent for Genome.</description>
    <inlineHelpText>Indicator that the Informed Consent document has been sent for Genome.</inlineHelpText>
    <label>Informed Consent Genome Sent</label>
    <type>Checkbox</type>
</CustomField>