force-app/main/default/objects/Lab__c/fields/Informed_Consent_Regenerated_Date__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Regenerated_Date__c</fullName>
    <label>Informed Consent Regenerated Date</label>
    <type>Date</type>
</CustomField>