force-app/main/default/objects/Lab__c/fields/Informed_Consent_Signature_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Signature_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informed Consent Signature Agreed</label>
    <type>Checkbox</type>
</CustomField>