force-app/main/default/objects/Lab__c/fields/Informed_Consent_Signature_Headers__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Signature_Headers__c</fullName>
    <label>Informed Consent Signature Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>