force-app/main/default/objects/Lab__c/fields/Informed_Consent_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Signature_Text__c</fullName>
    <label>Informed Consent Signature Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>