force-app/main/default/objects/Lab__c/fields/Informed_Consent_Signature_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Signature_Timestamp__c</fullName>
    <label>Informed Consent Signature Timestamp</label>
    <type>DateTime</type>
</CustomField>