force-app/main/default/objects/Lab__c/fields/Is_Migrated_LU__c.field-meta.xml
<CustomField>
    <fullName>Is_Migrated_LU__c</fullName>
    <formula>Cord_Blood_Order__r.Is_Migrated__c</formula>
    <label>Is Migrated LU</label>
    <type>Checkbox</type>
</CustomField>