force-app/main/default/objects/Lab__c/fields/Is_Voided_LU__c.field-meta.xml
<CustomField>
    <fullName>Is_Voided_LU__c</fullName>
    <description>Cancelled order, LU field on Cord Blood Order</description>
    <formula>Cord_Blood_Order__r.fw1__Is_Voided__c</formula>
    <inlineHelpText>Cancelled order, LU field on Cord Blood Order</inlineHelpText>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>