force-app/main/default/objects/Lab__c/fields/Kit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Kit_Expiration_Date__c</fullName>
    <label>Kit Expiration Date</label>
    <type>Date</type>
</CustomField>